@@ -10,6 +10,8 @@
  - Don't alter the _soapheaders elements during rendering, instead create a 
    deepcopy first. (#188)
  - Add the SOAPAction to the Content-Type header in SOAP 1.2 bindings (#211)
+ - Fix issue when mixing elements and any elements in a choice type (#192)
+ - Improving parsing of results for union types (#192)
 
 
 0.18.1 (2016-09-23)
